--- a/spirngTest1/pom.xml
+++ b/spirngTest1/pom.xml
@@ -115,7 +115,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.doxia</groupId>
+			<artifactId>doxia-sink-api</artifactId>
+			<version>1.0-alpha-7</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
