--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-/spirngTest1
+/springTest1/.classpath
+/springTest1/.project
+/springTest1/.settings/
+/springTest1/.springBeans
+/springTest1/target/
+/springTest1/pom.xml
